samples/_failures_safe/1761411407_e7dbb0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75d0bd00.c: In function ‘print_token’:
./samples/SAFE/__tmp_75d0bd00.c:167:12: error: missing terminating " character
  167 |     printf("Line %d, Column %d: %s (%s)\
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_75d0bd00.c:167:5: error: expected expression at end of input
  167 |     printf("Line %d, Column %d: %s (%s)\
      |     ^~~~~~
./samples/SAFE/__tmp_75d0bd00.c:167:5: error: expected declaration or statement at end of input
